--- a/default/modules-event-log.yml
+++ b/default/modules-event-log.yml
@@ -2,10 +2,31 @@ modules:
   eventLog:
     avatarChanged: "**{0} alterou o avatar**"
     userID: "ID do usuário: {0}"
-    messageDeleted: "**Mensagem de texto deletada**\n\n**Canal de texto:** {1}\n\n**Mensagem:**\n```\n{0}```"
+    messageDeleted:
+      - "**Mensagem de texto deletada**"
+      - ""
+      - "**Canal de texto:** {1}"
+      - ""
+      - "**Mensagem:**"
+      - ""
+      - "```{0}```"
     messageDeletedUploads: "**Arquivos anexados:**"
     bulkDeleted: "**Mensagens de texto deletadas**"
     banned: "{0} foi banido!"
     unbanned: "{0} foi desbanido!"
     noNickname: "Nenhum apelido"
-    nicknameChanged: "**Nickname de {0} foi alterado**\n\n**Antigo nickname:** `{0}`\n**Novo nickname:** `{1}`"
+    nicknameChanged: 
+      - "**Nickname de {0} foi alterado**"
+      - ""
+      - "**Antigo nickname:** `{0}`"
+      - "**Novo nickname:** `{1}`"
+    messageEdited: "**{0} editou uma mensagem de texto**"
+     - ""
+     - "**Canal de texto:** {3}"
+     - "" 
+     - "**Antiga mensagem:**"
+     - "```{1}```"
+     - "**Nova mensagem:**"
+     - "```{2}```"
+    joinedVoiceChannel: "{0} entrou no canal de voz `{1}`"
+    leftVoiceChannel: "{0} saiu do canal de voz `{1}`"
