--- a/default/modules-event-log.yml
+++ b/default/modules-event-log.yml
@@ -20,13 +20,14 @@ modules:
       - ""
       - "**Antigo nickname:** `{0}`"
       - "**Novo nickname:** `{1}`"
-    messageEdited: "**{0} editou uma mensagem de texto**"
-     - ""
-     - "**Canal de texto:** {3}"
-     - "" 
-     - "**Antiga mensagem:**"
-     - "```{1}```"
-     - "**Nova mensagem:**"
-     - "```{2}```"
+    messageEdited:
+      - "**{0} editou uma mensagem de texto**"
+      - ""
+      - "**Canal de texto:** {3}"
+      - "" 
+      - "**Antiga mensagem:**"
+      - "```{1}```"
+      - "**Nova mensagem:**"
+      - "```{2}```"
     joinedVoiceChannel: "{0} entrou no canal de voz `{1}`"
     leftVoiceChannel: "{0} saiu do canal de voz `{1}`"
