--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -102,11 +102,13 @@ commands:
     clear:
       description: "Escolha um número de um a 1.000 mensagens para serem limpas de pessoas específicas ou não."
       examples:
-        - "10"
-        - "35 @MrPowerGamerBR"
+        - "10 from:297153970613387264"
+        - "35 from:360162870069166080 and contains:Nsfw"
       couldNotFindMessages: "Não consegui encontrar nenhuma mensagem para ser deletada... Eu não consigo deletar mensagens que foram enviadas a mais de duas semanas devido a limitações do Discord!"
       invalidClearRange: "Eu só consigo limpar entre 2 até 1000 mensagens passadas!"
       operationQueued: "Aparentemente este servidor já tem uma operação de remoção de mensagens ocorrendo, espere um pouco."
+      invalidUserFilter: "Eu procurei em todo o lugar, mas não encontrei nenhum usuário que seja similar com o inserido! Lembre-se, eu procuro usuários por IDs, menções e nomes."
+      invalidTextFilter: "O filtro de texto inserido é inválido!"
       success: "O chat teve {0} mensagens deletadas por {1}!"
       successButIgnoredMessages: "Porém, {0} mensagens foram ignoradas por serem muito antigas, estarem fixadas ou não seguirem o filtro definido."
     roleId:
