--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -34,6 +34,7 @@ commands:
       reason: "Motivo"
       userId: "ID do Usuário"
       banDoesNotExist: "Este usuário não está banido!"
+      noReasonSpecified: "Nenhum motivo informado."
     kick:
       description: "Expulsa um usuário do seu servidor, você pode customizar as ações deste comando (como enviar via mensagem direta o motivo da punição, enviar em um canal a punição, entre outras coisas) no [meu website](https://loritta.website/dashboard/)!"
       punishAction: "Expulso"
