--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -17,6 +17,7 @@ commands:
     channelinfo:
       description: "Mostra informações de um canal de texto"
       channelInfo: "Informações do canal {0}"
+      channelId: "ID do canal"
       channelMention: "Menção do canal"
       channelCreated: "Canal criado há"
       channelTopic: "Tópico do canal"
