--- a/default/website.yml
+++ b/default/website.yml
@@ -79,23 +79,20 @@ website:
       - "Se você acha que o ban foi injusto (duvido que foi injusto) ou se você se arrependeu, envie uma mensagem privada para `MrPowerGamerBR#4185` pedindo para ser desbanido!"
       - ""
       - "Desculpe pela inconveniência..."
-    addedOnServer: 
-      - "Olá {0}, como vai você? Espero que o seu dia esteja sendo excelente! ✧ﾟ･: *ヽ(◕ヮ◕ヽ)"
+    addedOnServer:
+      - "**Olá {0}, como vai você? Eu espero que o seu dia esteja sendo excelente!** ✧ﾟ･: *ヽ(◕ヮ◕ヽ)"
       - ""
-      - "Não sei se foi você ou outra pessoa que me adicionou no *{1}*, mas, já que você tem permissão de Administrador (ou de gerenciar o servidor) eu acho que seria uma boa ideia falar um pouco sobre mim. <:loritta:331179879582269451>" 
+      - "Como foi você que me adicionou no *{1}*, eu decidi passar aqui para explicar um pouco sobre o que eu faço! {7}"
       - ""
-      - "Eu me chamo Loritta e sou apenas um simples bot para o Discord! Meu objetivo é deixar o seu servidor mais 👌🔥🔝 com mais entretenimento, melhor administração e com várias funções que você *jamais* viu em outros bots!"
+      - "Eu me chamo **Loritta Morenitta** {8} e o meu objetivo é te ajudar a manter o seu servidor no Discord. Depois que eu apareci, deixar o seu servidor único e extraordinário nunca foi tão fácil! {9}"
       - ""
-      - "nBem... chega de enrolação! Deixa eu falar um pouquinho sobre coisas que talvez irá te interessar. 😉"
+      - "• {10} O meu prefixo padrão é `+`, tente usar `+ping` no seu servidor para ter certeza que eu estou funcionando!"
+      - "• {11} Eu possuo vários comandos, se você quiser saber todos eles, veja a minha lista de comandos no meu website! <{2}>"
+      - "• {12} Se você deseja mudar/ativar/desativar as minhas funcionalidades (por exemplo: mudar o prefixo dos comandos, notificar canais do YouTube, etc), então acesse o painel de configuração do seu servidor! <{3}>"
+      - "• {13} Não se esqueça de ler as minhas regras e condições de uso! <{4}>"
+      - "• {14} Você não precisa pagar para eu ficar no seu servidor, mas, se você tiver um dinheiro sobrando e quer me ajudar a ficar online, compre premium para o seu servidor! <{5}>"
       - ""
-      - "• Por padrão o meu prefixo é `+`, tente usar `+ping` no seu servidor para ter certeza que eu estou funcionando!" 
-      - "• Se você quiser mudar/ativar/desativar as funções que eu tenho, então entre no meu painel! {2}" 
-      - "• Se você precisar de ajuda, quiser reportar bugs, quiser sugerir novidades ou simplesmente quer conversar sobre mim, então que tal dar uma passadinha no meu apartamento? 😊 {3}" 
-      - "• Eu tenho vários comandos (se você quiser saber, eu tenho **{4} comandos diferentes**!), se você quiser saber todos eles, use *ajuda* aqui neste chat! " 
-      - "• Você pode enviar vídeos novos de canais do YouTube automaticamente para o seu servidor! (E não é por nada não, mas sabia que eu notifico vídeos do YouTube mais rápido que o próprio YouTube? 😉) Só configurar isto no meu painel!"
+      - "E é claro, se você precisar de ajuda ou tiver algum problema que você não está conseguindo resolver, visite o meu servidor de suporte! {6}"
       - ""
-      - "...sério, no meu painel tem tudo, dê uma passadinha lá! {2}"
-      - ""
-      - "**Dica da <:loritta:331179879582269451>, a morena das quebradas:** Se você tiver dinheiro sobrando, por favor, doe! <{5}> Sabia que custa quase 260R$ por mês para eu ficar online? Então... sabe aquela coxinha meio mofada que você compra na cantina... em vez de comprar aquele negócio cheio de mofo, você poderia doar para mim para que eu possa ficar online por mais dias!"
-
+      - "*Boa sorte no seu servidor e, é claro, divirta-se~! -Loritta* {15}"
     supportServerInvite: "https://discord.gg/V7Kbh4z"
