--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -68,7 +68,7 @@ commands:
       description: "Lembra daquela paçoca que o seu amigo tinha te comprado? Que tal pagar ela usando a minha economia? \U0001F609"
       insufficientFunds: "Você não tem {0} suficientes para realizar esta transação!"
       transitionComplete: "Transação realizada com sucesso! {0} recebeu **{1} {2}**!"
-      sellDisallowedWarning: "**Não se esqueça:** É proibido o comércio de produtos que possuem valores reais (Nitro, dinheiro real, invites, conteúdo ilegal/NSFW, etc) por sonhos, você será banido de usar a Loritta caso faça! Veja todas as regras em <{0}>."
+      sellDisallowedWarning: "**Não se esqueça:** É proibido o comércio de produtos que possuem valores reais (Nitro, dinheiro real, invites, conteúdo ilegal/NSFW, etc) por sonhos, você será banido de usar a Loritta caso faça! Veja todas as regras em <{0}>. Não se esqueça que, ao aceitar a transação, você não conseguirá pedir os sonhos de volta e a equipe não irá te ajudar a pegar eles de volta, então apenas envie sonhos para pessoas confiáveis!"
     flipcoinbet:
       description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
       startBet: "{0}, {1} quer fazer uma aposta com você! Cada um irá pagar **{5} sonhos ({6} sonhos de taxa para jogar rs)**. Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
@@ -128,7 +128,7 @@ commands:
       boughtStocksWhileSelling: "Você comprou ou vendeu ações deste ticker enquanto esta ação estava pendente! Tente novamente e desculpe pela inconveniência!"
       successfullySold: "Você vendeu **{0} {1}** de `{2}`! {3}"
       successfullySoldProfit: "Com a venda, você **ganhou {0} sonhos (lucro de {1} sonhos)**!"
-      successfullySoldLoss: "Com a venda, você **perdeu {0} sonhos (perda de {1} sonhos)**! Nem todos os dias a gente sai ganhando... Sempre fique de olho no `{1}` para saber se vale a pena vender!"
+      successfullySoldLoss: "Com a venda, você **ganhou {0} sonhos (perda de {1} sonhos)**! Nem todos os dias a gente sai ganhando... Sempre fique de olho no `{1}` para saber se vale a pena vender!"
       successfullySoldNeutral: "Você não ganhou e nem perdeu nada com a sua venda."
     brokerPortfolio:
       description: "Veja o seu portfólio de ações que você comprou pelo Home Broker da Loritta"
