--- a/default/commands-utils.yml
+++ b/default/commands-utils.yml
@@ -31,6 +31,7 @@ commands:
     dicio:
       description: "Procure o significado de uma palavra no dicionário!"
     encode:
+      description: "Precisando encriptografar algo? Querendo transformar o seu texto em outra coisa? Então codifique ele! Codificações suportadas: {0}"
       originalText: "Texto Original"
       encodedText: "Texto Codificado"
     knowyourmeme:
@@ -50,6 +51,7 @@ commands:
       couldntFind: "Não encontrei nenhum texto nesta imagem..."
     packageinfo:
       description: "Mostra o status de uma encomenda dos correios, funciona com os Correios (Brasil) e a CTT (Portugal)"
+      couldntFind: "Não encontrei o objeto `{0}` no banco de dados do Correios!"
     weather:
       description: "Verifique a temperatura de uma cidade!"
       forecastFor: "Previsão do tempo para {0}, {1}"
