--- a/default/commands-music.yml
+++ b/default/commands-music.yml
@@ -4,3 +4,4 @@ commands:
       description: "Está passando vergonha porque você esqueceu como é a letra da sua música favorita? Tentando entender o que estão falando na música que você está escutando? Então pergunte para mim qual é a letra da música!"
       couldntFind: "Eu não consegui encontrar a letra dessa música..."
       sorryForTheInconvenience: "Desculpe pela inconveniência..."
+      goToNextPage: "Para ir a próxima página, clique em ▶"
