Atualização no website
Estava escrito 300 mil ao invés de 1 milhão (que é o tanto que guild que a lori tem hoje)

--- a/default/website.yml
+++ b/default/website.yml
@@ -23,7 +23,7 @@ website:
       termsOfService: "Termos de Serviço"
       privacyPolicy: "Política de Privacidade"
     allRightsReserved: "Todos os direitos reservados"
-    joinUsAndAddLoritta: "Junte-se a mais de 300 mil servidores e adicione a Loritta, o melhor bot para o Discord!"
+    joinUsAndAddLoritta: "Junte-se a mais de 1 milhão de servidores e adicione a Loritta, o melhor bot para o Discord!"
   unsupportedBrowser:
     - "Você está utilizando um navegador não suportado, funcionalidades do website podem não funcionar corretamente!"
     - "Nós recomendamos que você atualize para..."
