--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -100,6 +100,8 @@ commands:
       description: "Altera se você prefere que as punições sejam aplicadas diretamente ou se elas devem ter uma confirmação antes de punir!"
       enabled: "As punições rápidas foram ativadas! Ao punir um usuário, eu nem irei te perguntar se você realmente quer punir o usuário, vai punir direto sem dó e nem piedade! ...só não venha reclamar depois que você não queria ter punido aquele usuário, okay?"
       disabled: "As punições rápidas foram desativadas! Ao punir um usuário, você deverá confirmar se você realmente vai querer punir ele ou não... pelo ou menos assim você irá evitar aquele remorso ao punir alguém que não deveria ter levado aquela punição."
+      howDisable: "Caso queira desativar as punições rápidas, use o comando novamente!"
+      howEnable: "Case queira ativar as punições rápidas, use o comando novamente!"
     clear:
       description: "Escolha um número de um a 1.000 mensagens para serem limpas de pessoas específicas ou não."
       examples:
