--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -63,6 +63,17 @@ commands:
         - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
         - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
         - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
+      randomLorittaIsGratefulMessages:
+        - "Obrigada por me ajudar nesse momento difícil na minha vida monetária!"
+        - "Isso vai me ajudar a ficar rica novamente!"
+        - "Jamais irei esquecer das pessoas que me ajudaram quando estava pobre..."
+        - "#humilde"
+        - "Olha isso, você é mais humilde que o meu pai! <https://youtu.be/BCUUButEVY8>"
+        - "Obrigada pelos sonhos, irei fazer bom proveito deles!"
+        - "Obrigada por ajudar os pobres! (No caso, eu!)"
+        - "Você já pode colocar no seu currículo que você ajudou pessoas pobres (eu!), me falaram que empresas gostam quando pessoas ajudam as menos favorecidas..."
+        - "Já estou vendo no Twitter: \"Pessoa humilde ajuda garota necessitada\"!"
+        - "Pelo ou menos consegui sonhos sem precisar me vender igual @#$%, jamais faria isso... diferente de outras @ por aí..."
       clickToAcceptTheTransaction: "Para confirmar a transação, você e {0} devem clicar em {1}!"
       doYouThinkImPoor: "Você *acha* que eu sou pobre para transferir só isso para mim? Não sou mendiga para aceitar essa merrequinha aí. 2bj"
       description: "Lembra daquela paçoca que o seu amigo tinha te comprado? Que tal pagar ela usando a minha economia? \U0001F609"
