--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -6,6 +6,8 @@ commands:
       otherUserTransactions: "Transações de {0}"
       sentMoneySonhos: "Enviou {0} sonhos para {1}"
       receivedMoneySonhos: "Recebeu {0} sonhos de {1}"
+      sentMoneySonhosOnCoinflipBet: "Enviou {0} sonhos para {1} em apostas de sonhos girando uma moeda"
+      receivedMoneySonhosOnCoinFlipBet: "Recebeu {0} sonhos de {1} em apostas de sonhos girando uma moeda"
       sentMoneySonhosTax: "Pagou {0} sonhos em taxas de transações"
       genericReceived: "Recebeu {0} sonhos no {1}"
       genericSent: "Enviou {0} sonhos para {1}"
@@ -26,7 +28,6 @@ commands:
         background: "compras de background"
         sparklypower: "SparklyPower"
         inactiveDailyTax: "taxa de inatividade da conta no daily"
-        coinFlipBet: "apostas de sonhos girando uma moeda"
         stocks: "Loritta's Home Broker"
         guessNumber: "apostas de adivinhar números"
         emojiFight: "rinha de emojis"
