--- a/en-us/commands.yml
+++ b/en-us/commands.yml
@@ -7,6 +7,7 @@ commands:
   commandOnlyForOwner: "Only special people can use this command :3"
   userDoesntHavePermissionDiscord: "You don't have permissions to use this command! To be able to use it, you need to have permissions to {0}!"
   userDoesNotExist: "I searched everywhere, but I couldn't found anyone named `{0}`! Remember, I search user by ID, mentions and names."
+  userSameMention: "I see that you want to transfer your money to yourself? I don't think you need it, right?!"
   errorWhileExecutingCommand: "Oopsie! Something went wrong when running this command... {0} Sorry for the inconvenience. {1}"
   ifYouLikeMyFeaturesAndWantToHelp: "If you like my features and want to help me, please, {0}"
   pleaseUpvote: "vote for me! For every vote you win rewards (like sonhos!)! You can vote every 12 hours so... why not start voting now? Oh, and of course, thanks for the help! {0}"
